# factorio-telegram-rcon-bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  justfile
.github/workflows/: publish-docker.yml  release.yml
src/: config.rs  factorio.rs  fff.rs  log_reader.rs  main.rs  state.rs  telegram.rs
src/tasks/: factorio.rs  mod.rs  scrapper.rs  telegram.rs
