[package]
name = "cracktorio-bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-log-watcher = "0.0.1"
clap = { version = "4.4.4", features = ["env", "derive"] }
dotenv = "0.15.0"
feed-rs = "1.3.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
reqwest = "0.11.20"
teloxide = "0.12.2"
tokio = { version = "1.32.0", features = ["full"] }
color-eyre = "0.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
kube = "0.96.0"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
futures = "0.3.31"
scraper = "0.20.0"
savefile = "0.18.2"
savefile-derive = "0.18.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
